fix(Overlay): use variable for overlay z-index

--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -8,6 +8,7 @@
   --overlay-font-family: var(--default-font-family);
   --overlay-background: color(#333 alpha(65%));
   --overlay-caption-color: #fff;
+  --overlay-z-index: 9999;
 }
 
 /* Reset */
@@ -30,7 +31,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 9999;
+  z-index: var(--overlay-z-index);
   display: flex;
   background-color: var(--overlay-background);
   align-content: center;
